opam-version: "2.0"
version: "8.7.dev"
maintainer: "llamp@seas.upenn.edu"
synopsis: "Randomized Property-Based Testing Plugin for Coq"

homepage: "https://github.com/QuickChick/QuickChick"
dev-repo: "git+https://github.com/QuickChick/QuickChick.git"
bug-reports: "https://github.com/QuickChick/QuickChick/issues"
license: "MIT"

build: [ make "-j" jobs ]
install: [
  [make "-j" jobs "install" ]
  [make "-j" jobs "tests"] {with-test}
]
depends: [
  "ocaml" {>= "4.04.0"}
  "coq" {>= "8.7" < "8.8~"}
  "coq-ext-lib"
  "coq-mathcomp-ssreflect" {< "1.9~"}
  "ocamlbuild"
  "ocamlfind"
]

authors: [
  "Leonidas Lampropoulos <>"
  "Zoe Paraskevopoulou <>"
  "Maxime Denes <>"
  "Catalin Hritcu <>"
  "Benjamin Pierce <>"
  "Arthur Azevedo de Amorim <>"
  "Antal Spector-Zabusky <>"
]

tags: [
  "keyword:extraction"
  "category:Miscellaneous/Coq Extensions"
  "logpath:QuickChick"
]
