synopsis: "Randomized Property-Based Testing Plugin for Coq"
description: "Randomized Property-Based Testing Plugin for Coq"
opam-version: "2.0"
name: "coq-quickchick"
version: "1.0.2"
maintainer: "llamp@seas.upenn.edu"
homepage: "https://github.com/QuickChick/QuickChick"
dev-repo: "git+https://github.com/QuickChick/QuickChick.git"
bug-reports: "https://github.com/QuickChick/QuickChick/issues"
license: "MIT"

build: [ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "ocaml"                   { >= "4.05.0" }
  "dune"                    { >= "1.9.0"  }
  "menhir"                  {     build   }
  "coq"                     { >= "8.12"    }
  "coq-ext-lib"
  "coq-mathcomp-ssreflect"
  "coq-simple-io"           {  = "dev"    }
]

authors: [
  "Leonidas Lampropoulos <>"
  "Zoe Paraskevopoulou <>"
  "Maxime Denes <>"
  "Catalin Hritcu <>"
  "Benjamin Pierce <>"
  "Li-yao Xia <>"
  "Arthur Azevedo de Amorim <>"
  "Yishuai Li <>"
  "Antal Spector-Zabusky <>"
]
