(library
 (name quickchick_plugin)
 (public_name quickchick.plugin)
 (flags :standard -rectypes -w -8-27)
 (modules :standard \ genSTCorrect genSizedSTMonotonic genSizedSTSizeMonotonic)
 (libraries coq.plugins.extraction))

(rule
 (targets driver.ml)
 (deps (:pp-file driver.mlg))
 (action (run coqpp %{pp-file})))

(rule
 (targets quickChick.ml)
 (deps (:pp-file quickChick.mlg))
 (action (run coqpp %{pp-file})))

(rule
 (targets tactic_quickchick.ml)
 (deps (:pp-file tactic_quickchick.mlg))
 (action (run coqpp %{pp-file})))

(rule
 (targets weightmap.ml)
 (deps (:pp-file weightmap.mlg))
 (action (run coqpp %{pp-file})))

(coq.theory
 (name QuickChick)
 (public_name quickchick)
 (libraries quickchick.plugin))
