(coq.theory
 (name QuickChick)
 (package coq-quickchick)
 (flags :standard -w -deprecated-since-9.0)
 (plugins coq-quickchick.plugin))

(rule
  (alias compat)
  (target Compat.v)
  (action (run sh %{dep:../scripts/mycppo} %{dep:Compat.v.cppo} %{target})))

(rule
  (alias compat)
  (target ExtractionQC.v)
  (action (run sh %{dep:../scripts/mycppo} %{dep:ExtractionQC.v.cppo} %{target})))

(rule
  (alias compat)
  (target QuickChick.v)
  (action (run sh %{dep:../scripts/mycppo} %{dep:QuickChick.v.cppo} %{target})))

(rule
  (alias compat)
  (target TacticsUtil.v)
  (action (run sh %{dep:../scripts/mycppo} %{dep:TacticsUtil.v.cppo} %{target})))
