(alias
  (name runtest)
  (deps (alias_rec all)))

(coq.theory
  (name QuickChick.Testing)
  (theories QuickChick)
  (modules plugin derive))

(coq.extraction
  (prelude mutation)
  (extracted_modules mutation)
  (theories QuickChick))

(test
  (name mutation)
  (modules mutation)
  (flags :standard -w -39-67)
  (libraries zarith))
