(alias
  (name runtest)
  (deps (alias_rec all)))

(coq.theory
  (name QuickChick.Testing)
  (theories QuickChick)
  (flags :standard -w -deprecated-since-9.0)
  (modules plugin derive))

(coq.extraction
  (prelude mutation)
  (extracted_modules mutation)
  (flags :standard -w -deprecated-since-9.0)
  (theories QuickChick))

(test
  (name mutation)
  (modules mutation)
  (flags :standard -w -39-67)
  (libraries zarith))
