(coq.theory
  (name QuickChick.Examples.Other)
  (theories QuickChick)
  (flags :standard -w -deprecated-since-9.0)
  (modules
    BSTTest
    DependentTest
    ; dependentProofs  ; broken
    enumProofs
    ; enumSTProofs  ; broken
    ; Fuzz  ; broken
    ; genProofs  ; broken
    MergeExample
    PluginTest
    ProofGen
    ; Reflection  ; slow
    TacticExampleX
    tagging
    ; zoo  ; broken
    ))

(rule
  (alias compat)
  (target TacticExampleX.v)
  (action (run sh %{dep:../../scripts/mycppo} %{dep:TacticExampleX.v.cppo} %{target}))
  (deps TacticExample.v))
